ties 21min https://www.youtube.com/watch?v=xZMwg5z5VGk IR viduryje perdarymo kodo is node-postgres naudojimo i Knex naudojima

--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,11 @@
     "cors": "*",
     "express": "*",
     "jsonwebtoken": "*",
+    "knex": "^0.14.2",
     "morgan": "*",
     "passport": "*",
-    "passport-jwt": "*"
+    "passport-jwt": "*",
+    "pg": "^7.4.0"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
