--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "*",
-    "cors": "*",
-    "express": "*",
-    "jsonwebtoken": "*",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "joi": "^13.0.2",
+    "jsonwebtoken": "^8.1.0",
     "knex": "^0.14.2",
-    "morgan": "*",
-    "passport": "*",
-    "passport-jwt": "*",
-    "pg": "^7.4.0"
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^3.0.1",
+    "pg": "^7.4.0",
+    "tracer": "^0.8.11"
   },
   "devDependencies": {
     "eslint-config-standard": "^10.2.1",
